nginx/k8s-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
spec:
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    targetPort: 80
    port: 80
  selector:
    app: nginx
