nginx/k8s-config/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-feeder
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: serai.kevinlwh.com
      http:
        paths:
          - path: /
            backend:
              serviceName: feeder-service
              servicePort: 80
